added swagger for user
