# Gateway/docs/swagger.yaml
@@ -1,5 +1,59 @@
 basePath: /
 definitions:
+  errors.ErrorResponse:
+    properties:
+      code:
+        type: integer
+      message:
+        type: string
+    type: object
+  models.GetUserByIdRequest:
+    properties:
+      id:
+        type: string
+    type: object
+  models.GetUserByIdResponse:
+    properties:
+      created_at:
+        type: string
+      email:
+        type: string
+      id:
+        type: string
+      password:
+        type: string
+      updated_at:
+        type: string
+      username:
+        type: string
+    type: object
+  models.GetUserByUsernameRequest:
+    properties:
+      username:
+        type: string
+    type: object
+  models.GetUserByUsernameResponse:
+    properties:
+      created_at:
+        type: string
+      email:
+        type: string
+      id:
+        type: string
+      password:
+        type: string
+      updated_at:
+        type: string
+      username:
+        type: string
+    type: object
+  models.GetUsersResponse:
+    properties:
+      users:
+        items:
+          $ref: '#/definitions/models.UserForGetUsers'
+        type: array
+    type: object
   models.LoginRequest:
     properties:
       password:
@@ -33,6 +87,28 @@ definitions:
       id:
         type: string
     type: object
+  models.UpdateMeRequest:
+    properties:
+      email:
+        type: string
+      password:
+        type: string
+      username:
+        type: string
+    type: object
+  models.UserForGetUsers:
+    properties:
+      created_at:
+        type: string
+      email:
+        type: string
+      id:
+        type: string
+      updated_at:
+        type: string
+      username:
+        type: string
+    type: object
 host: localhost:8080
 info:
   contact: {}
@@ -44,7 +120,7 @@ paths:
     post:
       consumes:
       - application/json
-      description: логинит нового пользователя и возвращает JWT токен
+      description: авторизация и генерация jwt
       parameters:
       - description: Данные регистрации
         in: body
@@ -59,6 +135,10 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/models.LoginResponse'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/errors.ErrorResponse'
       security:
       - BearerAuth: []
       summary: Login
@@ -83,9 +163,134 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/models.RegisterResponse'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/errors.ErrorResponse'
       summary: Регистрация нового пользователя
       tags:
       - auth
+  /user/id:
+    get:
+      consumes:
+      - application/json
+      description: получить пользователя по id
+      parameters:
+      - description: id пользователя
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/models.GetUserByIdRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.GetUserByIdResponse'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/errors.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: GetUserByID
+      tags:
+      - users
+  /user/me:
+    get:
+      consumes:
+      - application/json
+      description: получить свои данные
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.LoginResponse'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/errors.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: GetME
+      tags:
+      - users
+    put:
+      consumes:
+      - application/json
+      description: обновить свои данные
+      parameters:
+      - description: Данные пользователя
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/models.UpdateMeRequest'
+      produces:
+      - application/json
+      responses:
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/errors.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: UpdateMe
+      tags:
+      - users
+  /user/name:
+    get:
+      consumes:
+      - application/json
+      description: получить пользователя по username
+      parameters:
+      - description: username пользователя
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/models.GetUserByUsernameRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.GetUserByUsernameResponse'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/errors.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: GetUserByUsername
+      tags:
+      - users
+  /user/users:
+    get:
+      consumes:
+      - application/json
+      description: получить всех пользователей
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.GetUsersResponse'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/errors.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: GetUsers
+      tags:
+      - users
   /ws:
     get:
       description: websocket коннект
